--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "argv": "^0.0.3",
     "axios": "^1.3.4",
+    "bunyan": "^1.8.15",
     "chalk": "^5.2.0",
     "dotenv": "^16.0.3",
     "fs": "^0.0.1-security",
@@ -14,6 +15,7 @@
     "node": "^19.8.1",
     "path": "^0.12.7",
     "typescript": "^5.0.3",
+    "winston": "^3.8.2",
     "yargs-parser": "^21.1.1"
   },
   "name": "npm-copilot",
