--- a/package.json
+++ b/package.json
@@ -14,16 +14,20 @@
     "i": "^0.3.7",
     "node": "^19.8.1",
     "path": "^0.12.7",
-    "typescript": "^5.0.3",
     "winston": "^3.8.2",
     "yargs-parser": "^21.1.1"
   },
   "name": "npm-copilot",
-  "version": "1.0.61",
+  "version": "1.0.63",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "@whoiskatrin",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "@types/node": "^18.15.11",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.3"
+  }
 }
