--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "type": "module",
-  "main": "error-listener.ts",
+  "main": "error-listener.js",
   "bin": {
-    "npm-copilot": "./error-listener.ts"
+    "npm-copilot": "./error-listener.js"
   },
   "dependencies": {
     "argv": "^0.0.3",
@@ -18,7 +18,7 @@
     "yargs-parser": "^21.1.1"
   },
   "name": "npm-copilot",
-  "version": "1.0.63",
+  "version": "1.0.64",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
