--- a/package.json
+++ b/package.json
@@ -1,35 +1,20 @@
 {
+  "name": "npm-copilot",
+  "version": "1.3.8",
+  "description": "CLI tool for Next.js that can analyze logs in real-time and suggest a solution using OpenAI.",
+  "license": "ISC",
+  "author": "@whoiskatrin",
   "type": "module",
   "main": "error-listener.js",
   "bin": {
     "npm-copilot": "./error-listener.js"
   },
-  "dependencies": {
-    "argv": "^0.0.3",
-    "axios": "^1.3.4",
-    "bunyan": "^1.8.15",
-    "chalk": "^5.2.0",
-    "dotenv": "^16.0.3",
-    "fs": "^0.0.1-security",
-    "i": "^0.3.7",
-    "node": "^19.8.1",
-    "node-fetch": "^3.3.1",
-    "path": "^0.12.7",
-    "winston": "^3.8.2",
-    "yargs": "^17.7.1",
-    "yargs-parser": "^21.1.1"
-  },
-  "name": "npm-copilot",
-  "version": "1.3.8",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "@whoiskatrin",
-  "license": "ISC",
-  "description": "",
-  "devDependencies": {
-    "@types/node": "^18.15.11",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.0.3"
+  "dependencies": {
+    "chalk": "^5.2.0",
+    "node-fetch": "^3.3.1",
+    "universal-dotenv": "^4.1.0"
   }
 }
